--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ Single/__pycache__
 Single/experiments
 Single/pretrained
 Single/tb_logger
+Multiple/__pycache__
+Multiple/experiments
+Multiple/pretrained
+Multiple/tb_logger
